kube-manifests/01-Nginx-App1-Deployment-and-NodePortService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx
spec:
  #replicas: 5
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx
  template:
    metadata:
      labels:
        app: app1-nginx
    spec:
    # PodSpec https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#podspec-v1-core
      containers:
      # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core
        - name: app1-nginx
          image: stacksimplify/kube-nginxapp1:1.0.0
          # image is app1 nginx
          ports:
            - containerPort: 80
          # Readiness Probe (https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#def_inf_hc) 
          # Default and inferred parameters            
          readinessProbe:
          # https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#container-probes
          # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#probe-v1-core
            httpGet:
            # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#httpgetaction-v1-core
              scheme: HTTP
              path: /app1/index.html
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5    
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  labels:
    app: app1-nginx
  annotations:
spec:
  type: NodePort
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
